[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes - Map/GUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes - Players and NPCs/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes - Map/Randomizer_Pelabuhan.gd" type="Script" id=3]
[ext_resource path="res://Scenes - Bosses/BossSerpentes.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes - Props/Border.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes - Pickups/weaponPickup.tscn" type="PackedScene" id=6]
[ext_resource path="res://Map/Pelabuhan/tileLand.png" type="Texture" id=7]
[ext_resource path="res://Map/Pelabuhan/Sea2.png" type="Texture" id=8]
[ext_resource path="res://Map/Pelabuhan/Sea.png" type="Texture" id=9]
[ext_resource path="res://Scenes - Pickups/armorPickup.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes - Props/Spawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes - Props/NPCSpawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes - Props/Lamp.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes - Props/BoxPelabuhanA.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes - Props/BoxPelabuhanB.tscn" type="PackedScene" id=15]
[ext_resource path="res://Audio - Sound Effect/wave_selesai.wav" type="AudioStream" id=16]
[ext_resource path="res://Audio - BGM/BGM BOSS 3.wav" type="AudioStream" id=17]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=3]
0/name = "tileLand.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 704, 320 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 4, 0 ), 176, Vector2( 4, 1 ), 182, Vector2( 4, 2 ), 434, Vector2( 4, 3 ), 50, Vector2( 4, 4 ), 178, Vector2( 5, 0 ), 248, Vector2( 5, 1 ), 255, Vector2( 5, 2 ), 507, Vector2( 5, 3 ), 59, Vector2( 5, 4 ), 251, Vector2( 6, 0 ), 440, Vector2( 6, 1 ), 447, Vector2( 6, 2 ), 510, Vector2( 6, 3 ), 62, Vector2( 6, 4 ), 446, Vector2( 7, 0 ), 152, Vector2( 7, 1 ), 155, Vector2( 7, 2 ), 218, Vector2( 7, 3 ), 26, Vector2( 7, 4 ), 154, Vector2( 8, 0 ), 184, Vector2( 8, 1 ), 191, Vector2( 8, 2 ), 506, Vector2( 8, 3 ), 58, Vector2( 8, 4 ), 186, Vector2( 9, 0 ), 443, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 442, Vector2( 9, 3 ), 190, Vector2( 10, 2 ), 250, Vector2( 10, 3 ), 187 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Sea2.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Sea.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 2 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[node name="Root" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 52.4109 ]
}

[node name="Map_Pelabuhan" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Map_Pelabuhan"]
tile_set = SubResource( 3 )
collision_layer = 16
collision_mask = 16
format = 1
tile_data = PoolIntArray( 65529, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 131065, 1, 0, 131066, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 196601, 1, 0, 196602, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 131092, 2, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 262137, 1, 0, 262138, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, 2, 0, 196608, 0, 0, 196609, 0, 1, 196610, 0, 2, 196611, 2, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 2, 0, 196625, 0, 0, 196626, 0, 1, 196627, 0, 2, 196628, 2, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 327673, 1, 0, 327674, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 2, 0, 262144, 0, 65536, 262145, 0, 65537, 262146, 0, 65538, 262147, 2, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 2, 0, 262161, 0, 65536, 262162, 0, 65537, 262163, 0, 65538, 262164, 2, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 393209, 1, 0, 393210, 2, 0, 393211, 2, 0, 393212, 2, 0, 393213, 2, 0, 393214, 1, 0, 393215, 2, 0, 327680, 0, 65536, 327681, 0, 65537, 327682, 0, 65538, 327683, 2, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 2, 0, 327697, 0, 65536, 327698, 0, 65537, 327699, 0, 65538, 327700, 2, 0, 327701, 1, 0, 327702, 2, 0, 327703, 2, 0, 327704, 2, 0, 327705, 2, 0, 327706, 1, 0, 458745, 1, 0, 458746, 2, 0, 458747, 0, 0, 458748, 0, 2, 458749, 2, 0, 458750, 1, 0, 458751, 2, 0, 393216, 0, 65536, 393217, 0, 65537, 393218, 0, 65538, 393219, 2, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 2, 0, 393233, 0, 65536, 393234, 0, 65537, 393235, 0, 65538, 393236, 2, 0, 393237, 1, 0, 393238, 2, 0, 393239, 0, 0, 393240, 0, 2, 393241, 2, 0, 393242, 1, 0, 524281, 1, 0, 524282, 2, 0, 524283, 0, 65536, 524284, 0, 65538, 524285, 2, 0, 524286, 1, 0, 524287, 2, 0, 458752, 0, 65536, 458753, 0, 65537, 458754, 0, 65538, 458755, 2, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 2, 0, 458769, 0, 65536, 458770, 0, 65537, 458771, 0, 65538, 458772, 2, 0, 458773, 1, 0, 458774, 2, 0, 458775, 0, 65536, 458776, 0, 65538, 458777, 2, 0, 458778, 1, 0, 589817, 1, 0, 589818, 2, 0, 589819, 0, 65536, 589820, 0, 65538, 589821, 2, 0, 589822, 1, 0, 589823, 2, 0, 524288, 0, 65536, 524289, 0, 65537, 524290, 0, 65538, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 0, 65536, 524306, 0, 65537, 524307, 0, 65538, 524308, 2, 0, 524309, 1, 0, 524310, 2, 0, 524311, 0, 65536, 524312, 0, 65538, 524313, 2, 0, 524314, 1, 0, 655353, 2, 0, 655354, 2, 0, 655355, 0, 65536, 655356, 0, 65538, 655357, 2, 0, 655358, 2, 0, 655359, 2, 0, 589824, 0, 65536, 589825, 0, 65537, 589826, 0, 131077, 589827, 0, 1, 589828, 0, 1, 589829, 0, 1, 589830, 0, 1, 589831, 0, 1, 589832, 0, 1, 589833, 0, 1, 589834, 0, 1, 589835, 0, 1, 589836, 0, 1, 589837, 0, 1, 589838, 0, 1, 589839, 0, 1, 589840, 0, 1, 589841, 0, 131078, 589842, 0, 65537, 589843, 0, 65538, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 0, 65536, 589848, 0, 65538, 589849, 2, 0, 589850, 2, 0, 720889, 0, 0, 720890, 0, 1, 720891, 0, 131078, 720892, 0, 131077, 720893, 0, 1, 720894, 0, 1, 720895, 0, 1, 655360, 0, 131078, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65537, 655379, 0, 131077, 655380, 0, 1, 655381, 0, 1, 655382, 0, 1, 655383, 0, 131078, 655384, 0, 131077, 655385, 0, 1, 655386, 0, 2, 786425, 0, 65536, 786426, 0, 65537, 786427, 0, 65537, 786428, 0, 65537, 786429, 0, 65537, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 65537, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 65537, 720922, 0, 65538, 851961, 0, 65536, 851962, 0, 65537, 851963, 0, 65537, 851964, 0, 65537, 851965, 0, 65537, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 65537, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65537, 786453, 0, 65537, 786454, 0, 65537, 786455, 0, 65537, 786456, 0, 65537, 786457, 0, 65537, 786458, 0, 65538, 917497, 0, 65536, 917498, 0, 65537, 917499, 0, 65537, 917500, 0, 65537, 917501, 0, 65537, 917502, 0, 65537, 917503, 0, 65537, 851968, 0, 65537, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 65537, 851987, 0, 65537, 851988, 0, 65537, 851989, 0, 65537, 851990, 0, 65537, 851991, 0, 65537, 851992, 0, 65537, 851993, 0, 65537, 851994, 0, 65538, 983033, 0, 131072, 983034, 0, 131073, 983035, 0, 131073, 983036, 0, 131073, 983037, 0, 131073, 983038, 0, 131073, 983039, 0, 131073, 917504, 0, 131073, 917505, 0, 131073, 917506, 0, 131073, 917507, 0, 131073, 917508, 0, 131073, 917509, 0, 131073, 917510, 0, 131073, 917511, 0, 131073, 917512, 0, 131073, 917513, 0, 131073, 917514, 0, 131073, 917515, 0, 131073, 917516, 0, 131073, 917517, 0, 131073, 917518, 0, 131073, 917519, 0, 131073, 917520, 0, 131073, 917521, 0, 131073, 917522, 0, 131073, 917523, 0, 131073, 917524, 0, 131073, 917525, 0, 131073, 917526, 0, 131073, 917527, 0, 131073, 917528, 0, 131073, 917529, 0, 131073, 917530, 0, 131074 )

[node name="Level" type="YSort" parent="."]
scale = Vector2( 1.00147, 1 )

[node name="Player" parent="Level" instance=ExtResource( 2 )]
position = Vector2( 665.568, 695.794 )

[node name="BossSerpentes" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 650, 425 )

[node name="weaponPickup" parent="Level" instance=ExtResource( 6 )]
position = Vector2( 700.771, 647.011 )

[node name="weaponPickup2" parent="Level" instance=ExtResource( 6 )]
position = Vector2( 86.946, 596.457 )

[node name="weaponPickup3" parent="Level" instance=ExtResource( 6 )]
position = Vector2( 1185.76, 602.607 )

[node name="armorPickup" parent="Level" instance=ExtResource( 10 )]
position = Vector2( 628.669, 646.479 )

[node name="Spawner1" parent="Level" instance=ExtResource( 11 )]
position = Vector2( -60.2537, 721.884 )

[node name="Spawner2" parent="Level" instance=ExtResource( 11 )]
position = Vector2( 1313.57, 718.64 )

[node name="NPCSpawner1" parent="Level" instance=ExtResource( 12 )]
position = Vector2( -124.873, 681.008 )

[node name="NPCSpawner2" parent="Level" instance=ExtResource( 12 )]
position = Vector2( 1372.49, 677.856 )

[node name="Lamp" parent="Level" instance=ExtResource( 13 )]
position = Vector2( 1054.82, 841.891 )

[node name="Lamp2" parent="Level" instance=ExtResource( 13 )]
position = Vector2( 261.745, 840.392 )

[node name="Lamp3" parent="Level" instance=ExtResource( 13 )]
position = Vector2( 31.9106, 522.912 )

[node name="Lamp4" parent="Level" instance=ExtResource( 13 )]
position = Vector2( 1246.07, 530.849 )

[node name="BoxPelabuhanA" parent="Level" instance=ExtResource( 14 )]
position = Vector2( 95.6554, 356.945 )
scale = Vector2( 1.25, 1.25 )

[node name="BoxPelabuhanB" parent="Level" instance=ExtResource( 15 )]
position = Vector2( 1182.87, 356.278 )
scale = Vector2( 1.25, 1.25 )

[node name="GUI" parent="." instance=ExtResource( 1 )]

[node name="Audio" type="Node2D" parent="."]

[node name="WaveClear" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 16 )
volume_db = -25.0

[node name="BGM" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 17 )
volume_db = -30.0
autoplay = true

[node name="Border" type="Node2D" parent="."]

[node name="Border" parent="Border" instance=ExtResource( 5 )]
position = Vector2( 708.026, -16.4329 )

[node name="Border2" parent="Border" instance=ExtResource( 5 )]
position = Vector2( 682.118, 850 )

[node name="Border3" parent="Border" instance=ExtResource( 5 )]
position = Vector2( 1455.4, 746.665 )
rotation = 1.5708

[node name="Border4" parent="Border" instance=ExtResource( 5 )]
position = Vector2( -171.589, 939.898 )
rotation = 1.5708
[connection signal="finished" from="Audio/BGM" to="." method="_on_BGM_finished"]
